--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "swoft/task": "~2.0.0",
     "swoft/websocket-server": "~2.0.0",
     "jirry/services": "~1.0@dev",
-    "swoft/devtool": "^2.0"
+    "swoft/devtool": "^2.0",
+    "guzzlehttp/guzzle": "~6.0"
   },
   "require-dev": {
     "swoft/swoole-ide-helper": "dev-master",
